refactor: minor facelift
- get rid of unused includes
- rename encoder c_str() to data()
- use cmake's find_package to locate libpq

Signed-off-by: Tolga Hoşgör <fasdfasdas@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(postgrespp CXX)
 
 add_subdirectory(src)
 
+option(POSTGRESPP_BUILD_TESTS "Build tests" OFF)
+
 if(POSTGRESPP_BUILD_TESTS)
   add_subdirectory(test)
 endif()
