--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,16 @@
+find_package(PostgreSQL REQUIRED)
+
 add_library(postgrespp basic_connection.cpp)
 
-target_include_directories(postgrespp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 target_compile_options(postgrespp PUBLIC -pthread -std=c++17)
+target_include_directories(
+  postgrespp PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/../include
+  ${PostgreSQL_INCLUDE_DIRS}
+)
+target_link_libraries(postgrespp PUBLIC PostgreSQL::PostgreSQL)
 target_link_options(postgrespp PUBLIC -pthread)
-target_link_libraries(postgrespp pq)
+
 file(GLOB POSTGRESPP_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include/**.hpp)
 set_target_properties(postgrespp PROPERTIES
   PUBLIC_HEADER "${POSTGRESPP_HEADERS}")
